2001-12-20  Bradford Hovinen  <hovinen@ximian.com>

	* schemas/Makefile.am (schema_DATA): Add background, screensaver
	files

	* configure.in (GNOMECC_DESKTOP_DIR): Define
	(GNOMECC_DATA_DIR): Define
	Remove AC_DEFINE_UNQUOTED for the rest of the directories

	* schemas/Makefile.am (EXTRA_DIST): Add

	* configure.in: Removed capplets/sound/Makefile

	* Makefile.am (SUBDIRS): Put gnome-settings-daemon after
	libbackgrounds

	* capplets/Makefile.am (always_built_SUBDIRS): Add common,
	background, keyboard, mouse back in

	* configure.in (PKG_CHECK_MODULES): Remove lines pertaining to the
	archiver, add line for gnome settings daemon

Sun Dec  9 19:24:47 2001  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: use gconf macros.

Sat Dec  8 21:33:10 2001  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-daemon/gnome-settings-daemon.c (main): Import
	from gconf-xsettings module.  Cleaned up a bunch, and made to work
	with mouse properties too.

	* schemas/peripherals.schemas: New location for schemas.  Need to
	write many more.

2001-12-09  Gediminas Paulauskas <menesis@delfi.lt>

	* *.c (main): retrieve translation in utf-8 codeset. Do not
	setlocale ().
	* some Makefile.am (INCLUDES): remove intl.
	(..._LDADD): remove INTLLIBS

2001-12-08  Havoc Pennington  <hp@pobox.com>

	* configure.in (COMMON_MODULES): add gnome-desktop-2.0 to CFLAGS,
	add AC_PROG_INTLTOOL

2001-12-08  Richard Hestilow  <hestilow@ximian.com>

	* capplets/Makefile.am: Remove bonobo subdirs so people
	stop yelling at us.

2001-12-08  Richard Hestilow  <hestilow@ximian.com>

	* configure.in: Add special gconf defines (gconftool, etc).
	
2001-12-01  Richard Hestilow  <hestilow@ximian.com>

	* configure.in: Add libsounds stuff.
	* Makefile.am (SUBDIRS): Add libsounds.

Fri Nov 30 15:35:39 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Added AM_GLIB_GNU_GETTEXT and
	setting of GETTEXT_PACKAGE.

	* Makefile.am: Change from xml-i18n-extract (etc.)
	to intltool-extract (etc.)
