@@ -16,4 +16,4 @@ desktop_DATA = keyboard.desktop
 
 INCLUDES   = $(GNOMECC_CAPPLETS_CFLAGS)
 CLEANFILES = $(GNOMECC_CAPPLETS_CLEANFILES)
-EXTRA_DIST = $(Glade_DATA) $(icons_DATA)
+EXTRA_DIST = $(Glade_DATA) $(icons_DATA) $(desktop_DATA)
