@@ -2,6 +2,7 @@
 
 	* schemas/Makefile.am (schema_DATA): Add background, screensaver
 	files
+	(install-data-local): Allow specification of multiple schema files
 
 	* configure.in (GNOMECC_DESKTOP_DIR): Define
 	(GNOMECC_DATA_DIR): Define
